# MemoryMan

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/wokflows/: build.yaml
.github/workflows/: build.yaml
example/: CMakeLists.txt  main.c
planning/: Analyzer.md  Debugger.md  RessourcePool.md
src/: CMakeLists.txt  allocation_data_table.c  allocation_data_table.h  allocation_meta_data.c  allocation_meta_data.h  allocation_meta_data_table.c  allocation_meta_data_table.h  analyzer.c  analyzer.h  fnv1a.c  fnv1a.h  initialize.c  memory_debug.c  memory_man.h  memory_tracer.c  memory_tracer.h  memory_tracer_internal.c  pointer_table.c  pointer_table.h  table.h  traced_allocations.c  untraced_allocations.c  untraced_allocations.h  untraced_memory.h
